--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -53,6 +53,10 @@ doctrine:
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
+        types:
+            negative: Vith\CustomTypeBugBundle\DoctrineTypes\NegativeType
+        mapping_types:
+            negative: negative
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
         #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
